Final commit for the day

--- a/Venti/app/resources/imagers/views/threshold.jl.html
+++ b/Venti/app/resources/imagers/views/threshold.jl.html
@@ -1,5 +1,4 @@
 </ul>
-<li>$(typeof(res)) by $(res)</li>
+<li>$(typeof(res)) $(println(pwd())) $(image) by $(res)</li>
 <!-- <a>img</a> -->
-<!-- <img src="$(image)" alt="Italian Trulli"> -->
 </ul>
