--- a/Venti/app/layouts/app.jl.html
+++ b/Venti/app/layouts/app.jl.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-    <h1>Always</h1>
+    <!-- <h1>Always</h1> -->
     <%
       @yield
     %>
-        <img src='$(pwd())/appe.png' alt="image">
+        
         <h1>jkg</h1>
 </body>
 
