--- a/Venti/app/resources/imagers/views/threshold.jl.html
+++ b/Venti/app/resources/imagers/views/threshold.jl.html
@@ -1,4 +1,7 @@
 </ul>
-<li>$(typeof(res)) $(println(pwd())) $(image) by $(res)</li>
+<li>$(typeof(res)) by $(res)</li>
 <!-- <a>img</a> -->
-</ul>
+<% data = @show println(pwd()) %>
+    <h2>$(data)</h2>
+    <img src='appe.png' alt="image">
+    </ul>
