Adding Image Morphology

--- a/Venti/app/layouts/app.jl.html
+++ b/Venti/app/layouts/app.jl.html
@@ -3,16 +3,47 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Genie :: The Highly Productive Julia Web Framework</title>
+    <title>Image Restoration Toolkit</title>
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="./assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+<style>
+    body {
+        background-color: white;
+    }
+    
+    h1 {
+        color: black;
+    }
+    
+    p {
+        color: black;
+    }
+    
+    ul {
+        color: blue;
+    }
+    
+    li {
+        color: black;
+    }
+    
+    input {
+        color: black;
+    }
+</style>
 
 <body>
+    <h1>Hello</h1>
+    <img src="/img/genie/docs.png" class="speaker-img" alt="The docs">
+    <!-- <img src="./../../public/img/appe.png" class="speaker-img" alt="The docs"> -->
     <!-- <h1>Always</h1> -->
+
     <%
       @yield
     %>
-        
-        <h1>jkg</h1>
 </body>
 
 </html>
